hphp/hack/test/sound_dynamic/typing/map_index.bad.php.exp
File "map_index.bad.php", line 11, characters 3-15:
Invalid assignment (Typing[4110])
  File "map_index.bad.php", line 6, characters 12-14:
  Expected `int`
  File "map_index.bad.php", line 11, characters 13-15:
  But got `string`
File "map_index.bad.php", line 12, characters 3-15:
Invalid assignment (Typing[4110])
  File "map_index.bad.php", line 7, characters 17-19:
  Expected `int`
  File "map_index.bad.php", line 12, characters 13-15:
  But got `string`
File "map_index.bad.php", line 28, characters 5-23:
Invalid assignment (Typing[4110])
  File "map_index.bad.php", line 19, characters 21-23:
  Expected `int`
  File "map_index.bad.php", line 28, characters 21-23:
  But got `string`
File "map_index.bad.php", line 29, characters 5-23:
Invalid assignment (Typing[4110])
  File "map_index.bad.php", line 20, characters 27-29:
  Expected `int`
  File "map_index.bad.php", line 29, characters 21-23:
  But got `string`
File "map_index.bad.php", line 30, characters 5-23:
Invalid assignment (Typing[4110])
  File "map_index.bad.php", line 21, characters 22-24:
  Expected `int`
  File "map_index.bad.php", line 30, characters 21-23:
  But got `string`
